--- a/style.css
+++ b/style.css
@@ -115,6 +115,16 @@ body {
     margin-top: 4%;
   }
   
+  #move-button {
+    width: 6vw;
+    height: 5vh;
+    background: #5ed2d0;
+    color: black;
+    border-radius: 10%;
+    position: absolute;
+    font-family: Consolas,"courier new";
+  }
+
   #start-button {
     width: 6vw;
     height: 5vh;
@@ -135,11 +145,35 @@ body {
     left: 30%;
     font-family: Consolas,"courier new";
   }
+
+  #rotate-button {
+    width: 6vw;
+    height: 5vh;
+    color: black;
+    border-radius: 10%;
+    background: #4caf50; 
+    font-family: Consolas, "courier new";
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+    cursor: pointer;
+}
   
+  #move-button:hover {
+    cursor: pointer;
+    color: black;
+    background: #5e85d2;
+  }
+
   #start-button:hover {
     cursor: pointer;
     color: black;
     background: #D25E8F;
+  }
+
+  #rotate-button:hover {
+    cursor: pointer;
+    color: black;
+    background: #5e85d2;
   }
   
   #restart-button:enabled:hover {
